# gcc_

./: CMakeLists.txt  main  main.cpp
.codesandbox/: template.json
.devcontainer/: Dockerfile
cmake/: config.h.in
lib/: CMakeLists.txt  ListNode.cpp  ListNode.cxx  ListNode.h  ListNode.hpp  Node.cpp  Node.h
lib/list/: CMakeLists.txt  List.cpp  List.h
lib/nodo/: CMAkeLists.txt  Nodo.cpp  Nodo.h
lib/test/: main.cpp
lib/tests/: CMakeLists.txt  Test_ListNode_GetElements.cpp  Test_ListNode_InsertFirst.cpp  Test_Node.cpp
src/: main.cpp
src/components/: calculadora.cpp
src/window/: window.cpp  window.h
test/: CMakeLists.txt  sum.cpp
